correct add event