@@ -15,6 +15,7 @@ import org.springframework.validation.BindingResult;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.servlet.mvc.support.RedirectAttributes;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Slf4j
@@ -50,7 +51,7 @@ public class EventController {
 
     @ModelAttribute("createEventForm")
     public CreateEventForm initCreateForm(){
-        return new CreateEventForm("", "", List.of("", ""));
+        return new CreateEventForm("", "", java.util.Arrays.asList("", ""));
     }
 
     @GetMapping("/add")
